# weaver

./: .gitignore  .gitmodules  README.md  atomique_config.yml  atomique_run.py  dpqa_run.py  evaluation.py  geyser_run.py  output.json  plot.py  pyproject.toml  pyvenv.cfg  rebuild.sh  run.py  shell.nix  superconducting_run.py  test.py  weaver_run.py
DPQA/: animation.py  run.py
atomique/: README.md  all_script.sh  evaluation_utils.py  hyperparams.py  run.py  tox.ini  utils.py
atomique/benchmarks/: benchmark_set.py
atomique/compilers/: README.md  analyzer.py
atomique/configs/: gen_config.py
atomique/plot/: plot_utils.py
benchmarks/DPQA/: graph20_09.json
benchmarks/QASMBench/: uf20-01.qasm  uf20-010.qasm  uf20-04.qasm  uf20-05.qasm  uf20-08.qasm  uuf100-01.qasm  uuf100-010.qasm  uuf100-02.qasm  uuf100-05.qasm  uuf100-08.qasm  uuf150-01.qasm  uuf150-03.qasm  uuf150-05.qasm  uuf150-09.qasm  uuf250-010.qasm  uuf250-03.qasm  uuf250-07.qasm  uuf250-08.qasm  uuf50-010.qasm  uuf50-04.qasm  uuf50-07.qasm  uuf50-09.qasm  uuf75-01.qasm  uuf75-02.qasm  uuf75-05.qasm
benchmarks/benchmarks/: _types.py  _utils.py  ghz_generator.py
evaluation/: atomique_config.yml  config.yml
results/: atomique_results copy.csv  atomique_results.csv  atomique_results.yml  atomique_results_bk.csv  geyser_results.csv  superconducting_results.csv  superconducting_results_bk.csv  weaver_results.csv  weaver_results_bk.csv
utils/: __init__.py  calibration_estimator.py  circuit_estimator.py  gate_length_estimator.py  geyser.py  instances_to_dpqa_json.py  instances_to_qasm.py  utils_fid.py
(+7544 files in other folders)
