[project]
name = ""
version = ""
description = ""
authors = [
    {name = "FranciscoRomao", email = "francisco.romao@tum.de"},
]
dependencies = [
    #"pandas>=2.2.2",
    #"seaborn>=0.13.2",
    "numpy==1.26",
    "python-sat>=0.1.7.dev21",
    "matplotlib>=3.3.2",
    "qiskit==0.39.5",
    #"redis>=5.0.4",
    #"qiskit-ibm-runtime>=0.23.0",
    #"sortedcontainers>=2.4.0",
    "pyyaml>=6.0.1",
    #"mqt-bench>=1.1.2",
    #"mapomatic>=0.12.0",
    #"qiskit-algorithms>=0.3.0",
    "pdbpp>=0.10.3",
    "pandas>=2.2.2",
    "scipy>=1.5.2",
    "setuptools>=52.0.0",
    "tensorflow>=2.4.1",
    "torch>=1.8.0",
    "z3-solver>=4.12.1.0",
    "networkx>=3.0",
    "torchpack>=0.3.1",
    "seaborn>=0.13.2",
    "mapomatic>=0.7.0",
]
requires-python = "<3.13,>=3.10"
license = {text = "MIT"}


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
